<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/full_section"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp" >

    <LinearLayout
        android:id="@+id/section_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/bar"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/img_social"
            style="@style/SocialNetworkImageButton"
            android:src="@drawable/facebook_icon" />

        <TextView
            android:id="@+id/social_name_title"
            style="@style/TitleBar.Large"
            android:text="@string/Facebook"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/section_bar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/social_name"
            style="@style/TitleBar.Medium_2"
            android:text="@string/facebook_name" />

        <ImageButton
            android:id="@+id/social_share"
            android:contentDescription="@string/sharing_content"
            style="@style/SocialLogStyle2" />
    </LinearLayout>

</RelativeLayout>