<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_corners"
    android:fadeScrollbars="false" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- #E0FDDD -->

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/edit_message_custom_text"
            android:gravity="center"
            android:text="@string/message_hint"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linear_word_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTitle"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/edit_message_custom_text"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:src="@drawable/twitter_icon" />

                <TextView
                    android:id="@+id/textMessageLengthInDialog_Twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/message_length" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:src="@drawable/facebook_icon" />

                <TextView
                    android:id="@+id/textMessageLengthInDialog_Facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/message_length" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayouteditmessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linear_word_count"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editMessageInDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_message_custom_text"
                android:ems="10"
                android:gravity="left|top"
                android:inputType="textMultiLine|textNoSuggestions"
                android:lines="4"
                android:maxLines="4" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayoutbuttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearlayouteditmessage"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/edit_message_custom_text"
                android:text="@string/cancel_logout" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/edit_message_custom_text"
                android:text="@string/ok" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>